# irc-search-index

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  index.rs  main.rs  serve.rs
static/: style.css
templates/: header.html.hbs  search.html.hbs
